<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="logotipo">Logotipo</string>
    <string name="informacao">Informe seu e-mail cadastrado e você receberá um link para alterar sua senha.</string>
    <string name="recupera_senha">Recuperar senha</string>
    <string name="cria_sua_conta">Cria sua conta</string>
    <string name="criar_conta_email">Criar conta</string>
    <string name="firebase_app">Firebase APP</string>
</resources>